# QtHello

./: .gitignore  CMakeLists.txt  CMakePresets.json
QtHello/: CMakeLists.txt  QtSample.cpp  QtSample.h
QtHello/src/: Dialog.cpp  QtSample.cpp
installers/: qtsvg.py
